--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ header, button {
 
 header {
     max-width: 640px;
+    margin: 0 auto;
 }
 
 header .container {
@@ -59,6 +60,7 @@ img {
     max-width: 640px;
     width: 100%;
     padding: 32px;
+    margin: 0 auto;
 }
 
 .lista-produtos p {
@@ -71,4 +73,70 @@ img {
 
 .valor {
     font-style: italic;
+}
+
+@media screen and (min-width:641px) and (max-width: 1023px){
+    
+    header, .container {
+        max-width: 1023px;
+    }
+
+    header .container {
+        padding: 8px 64px;
+    }
+
+    .container {
+        padding: 0 64px;
+        padding-top: 32px;
+    }
+
+    .lista-produtos {
+        display: grid;
+        grid-template-columns: repeat(2, 49.5%);
+        column-gap: 1%;
+        row-gap: 3%;
+    }
+
+    nav li {
+        display: inline;
+        margin-right: 30px;
+    }
+
+    br {
+        display: none;
+    }
+
+}
+
+@media screen and (min-width: 1024px) {
+        
+    .container {
+        max-width: 60%;
+    }
+    
+    header {
+        max-width: 100%;
+    }
+
+    .lista-produtos {
+        display: grid;
+        grid-template-columns: repeat(4, 24.25%);
+        column-gap: 1%;
+        row-gap: 3%;
+    }
+
+    nav li {
+        display: inline;
+        margin-right: 30px;
+    }
+
+    br {
+        display: none;
+    }
+
+    #sobre-a-loja .container {
+        display: grid;
+        grid-template-columns: 30% 65%;
+        column-gap: 5%;
+    }
 }
